--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "next": "^10.0.7",
     "next-dark-mode": "^2.3.2",
+    "posthog-js": "^1.8.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-iframe": "^1.8.0",
